--- a/src/components/Checkout/index.css
+++ b/src/components/Checkout/index.css
@@ -102,6 +102,7 @@
   .total{
     font-size: 20px;
     font-weight: 400;
+    
   }
   
   .summary-total-title{
@@ -114,6 +115,8 @@
     font-size: 25px;
     font-weight: bold;
     background-color: #3f9172;
-    width: 20%;
-    padding-right: 10px;
+    border-radius: 10px;
+    width: 150px;
+    text-align: right;
+    padding-right: 20px;
   }
