--- a/src/components/Home/index.css
+++ b/src/components/Home/index.css
@@ -26,6 +26,7 @@
  }
 
  .carousel-container{
+  height: 50vh;
   width: 100%;
   display: flex;
   flex-direction: row;
@@ -40,7 +41,7 @@
   .explore-button {
     padding: 14px;
     background-color: #5a8f7b;
-    font-size: 22px;
+    font-size: 20px;
     color: white;
     border: none;
     border-radius: 10px;
